--- a/angular.json
+++ b/angular.json
@@ -13,8 +13,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "allowedCommonJsDependencies": [ "chart.js" ],
-            "outputPath": "dist/notus-angular",
+            "allowedCommonJsDependencies": [
+              "chart.js"
+            ],
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
